2007-07-26  Jordi Mas <jmas@softcatala.org>

	* LINGUAS: Added ca.
	* ca.po: Initial Catalan translation

2007-07-26  Raphael Higino  <raphaelh@svn.gnome.org>

	* LINGUAS: Added pt_BR.
	* pt_BR.po: Added Brazilian Portuguese translation

2007-07-04  Pema Geyleg <pema.geyleg@gmail.com>

	* dz.po: Updated dzongkha translation

2007-06-26  Artur Flinta  <aflinta@svn.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.

2007-06-14  Pema Geyleg <pema.geyleg@gmail.com>

	* dz.po: Added dzongkha translation
	* LINGUAS: Added dz to the list

2007-05-18  Calvin Gaisford <calvinrg@gmail.com>

	* POTFILES.in: Removed the test code files

2007-05-17  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.
	* POTFILES.in: Added missing files.

2007-05-16  David Lodge <dave@cirt.net>

	* en_GB.po: Updated British English translation; well actually added it as I forgot to do an svn add last time...

2007-05-15 Boyd Timothy <btimothy@gmail.com>

	* en_GB.po, fi.po, sv.po: Ran `make update-po` and newer
	files were generated.  Also stubbed-out en_GB.po since
	David forgot it.

2007-05-15 Boyd Timothy <btimothy@gmail.com>

	* fi.po: Fixed the charset.

2007-05-15  David Lodge <dave@cirt.net>

	* en_GB.po: Updated British English translation

2007-05-14  Daniel Nylander <po@danielnylander.se>

	* sv.po: Added Swedish translation.

2007-04-24 Boyd Timothy <btimothy@gmail.com>

	* POTFILES.in: Fixed accidental non-commented line which was
	  causing the build (make distcheck) to not work.

2007-04-24 Boyd Timothy <btimothy@gmail.com>

	* fi.po: Added a non-translated version so the build would work.

2007-04-24 Boyd Timothy <btimothy@gmail.com>

	* POTFILES.in: Added this file so the build would work.
