@@ -1,3 +1,8 @@
+2007-08-15  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Added many missing files.
+	* en_CA.po: Updated Canadian English translation.
+
 2007-07-26  Jordi Mas <jmas@softcatala.org>
 
 	* LINGUAS: Added ca.
